--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@next/font": "^14.2.15",
     "lucide-react": "^0.469.0",
     "next": "15.1.2",
+    "nodemailer": "^6.9.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
