--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@next/font": "^14.2.15",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.469.0",
     "mongoose": "^8.9.5",
     "next": "15.1.2",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.9.16",
     "react": "^19.0.0",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
